--- a/projects.json
+++ b/projects.json
@@ -19,5 +19,13 @@
 	"author" "Raphael Panic",
 	"year": "2018",
 	"status": 1
+    },
+    {
+	 "title": "FGMOBA",
+         "folder": "FGMOBA",
+         "author": "Stefan Lehner",
+         "year": "2018",
+         "info": "Fighting Game MOBA",
+         "status": 0
     }
 ]
