--- a/projects.json
+++ b/projects.json
@@ -19,5 +19,12 @@
 	"author" "Raphael Panic",
 	"year": "2018",
 	"status": 1
+    },
+	{
+	"title": "Mega Dario",
+	"folder": "MegaDario",
+	"author" "Lukas Ratzenböck",
+	"year": "2018",
+	"status": 0
     }
 ]
