--- a/projects.json
+++ b/projects.json
@@ -16,14 +16,14 @@
     {
 	"title": "Space Odysee",
 	"folder": "SpaceOdysee",
-	"author" "Raphael Panic",
+	"author": "Raphael Panic",
 	"year": "2018",
 	"status": 1
     },
 	{
 	"title": "Mega Dario",
 	"folder": "MegaDario",
-	"author" "Lukas Ratzenböck",
+	"author": "Lukas Ratzenböck",
 	"year": "2018",
 	"status": 0
     }
