is a bleda gschnas oida

--- a/projects.json
+++ b/projects.json
@@ -39,4 +39,12 @@
         "author": "Andreas Zauner",
         "year": "2018",
         "status": 0
+	},
+{
+        "title": "CupKopf",
+        "folder": "CupKopfWebGl",
+        "author": "Daniel Etzinger",
+        "year": "2018",
+        "status": 0
+	}
 ]
