--- a/projects.json
+++ b/projects.json
@@ -61,5 +61,12 @@
 	"author": "Christian Lindner",
 	"year": "2018",
 	"status": 0
-	}
+	},
+     {
+        "title": "Realistic Imunsystem",
+        "folder": "Realistic_Imunsystem",
+        "author": "Stefan Rupertsberger",
+        "year": "2018",
+        "status": 0
+    }
 ]
