--- a/projects.json
+++ b/projects.json
@@ -77,5 +77,12 @@
         "author": "Stefan Rupertsberger",
         "year": "2018",
         "status": 0
+    },
+     {
+        "title": "FLAPPER_BYRD",
+        "folder": "flapper",
+        "author": "Roman Groiss",
+        "year": "2018",
+        "status": 0
     }
 ]
