--- a/projects.json
+++ b/projects.json
@@ -104,5 +104,12 @@
         "author": "Reidinger Julia",
         "year": "2018",
         "status": 1
-    }
+    },
+	{
+        "title": "2D_RPG",
+        "folder": "2D_RPG",
+        "author": "Marcus Gründlinger",
+        "year": "2018",
+        "status": 0
+}
 ]
