--- a/projects.json
+++ b/projects.json
@@ -111,5 +111,12 @@
         "author": "Marcus Gründlinger",
         "year": "2018",
         "status": 0
-}
+},
+	{
+		"title": "Haunting_School",
+		"folder": "Haunting_School_WGL",
+		"author": "Ingrid Lehner",
+		"year": "2018",
+		"status": 1
+	}
 ]
