--- a/projects.json
+++ b/projects.json
@@ -126,5 +126,12 @@
         "year": "2018",
         "info": "des game is lit",
         "status": "0"
+    },
+    {  
+        "title": "BlockDodger",
+        "folder": "BlockDogerWebBuild",
+        "author": "LukasSchlogaZareh",
+        "year": "2018",
+        "status": "1"
     }
 ]
