--- a/projects.json
+++ b/projects.json
@@ -133,5 +133,12 @@
         "author": "LukasSchlogaZareh",
         "year": "2018",
         "status": "1"
-    }
+    },
+	{
+		"title": "TwinStickShooter",
+        "folder": "TwinStickShooter",
+        "author": "Danirami",
+        "year": "2018",
+        "status": "1"
+	}
 ]
