--- a/projects.json
+++ b/projects.json
@@ -4,11 +4,12 @@
         "folder": "JumpNRun",
         "author": "Michael Wagner",
         "year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
         "status": 1
     },
 	{
         "title": "Schoolfight",
-        "folder": "SchoolFight",
+        "folder": "Schoolfight",
         "author": "Maximilian Schwarz",
         "year": "2017_WS",
         "status": 0
@@ -18,13 +19,15 @@
         "folder": "PokémonFallout",
         "author": "Robert Ortner",
         "year": "2017_WS",
-        "status": 0
+	"info": "works in Chrome,Edge,FF",
+        "status": 1
     },
     {
 	"title": "Space Odysee",
 	"folder": "SpaceOdysee",
 	"author": "Raphael Panic",
 	"year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
 	"status": 1
     },
 	{
@@ -32,6 +35,7 @@
 	"folder": "MegaDario",
 	"author": "Lukas Ratzenböck",
 	"year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
 	"status": 0
 	},
     {
@@ -39,7 +43,8 @@
          "folder": "FGMOBA",
          "author": "Stefan Lehner",
          "year": "2017_WS",
-         "status": 0
+	 "info": "WebGL cannot be server for multiplayer games",
+         "status": -1
     },
    {
         "title": "oss",
@@ -53,7 +58,7 @@
 	"folder": "SSB",
 	"author": "Benedikt Simetsberger",
 	"year": "2017_WS",
-	"info": "A very good 2d platform based fighting game",
+	"info": "A very good 2d platform based fighting game; works in Chrome,Edge,FF",
 	"status": "1"
 },
 {
@@ -61,6 +66,7 @@
         "folder": "CupKopfWebGl",
         "author": "Daniel Etzinger",
         "year": "2017_WS",
+         info": "fehlt?",
         "status": 0
 	},
 	 {
@@ -96,6 +102,7 @@
         "folder": "SuperRaveBoyWeb",
         "author": "Adrian Haiser",
         "year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
         "status": 1
     },
 	{
@@ -103,6 +110,7 @@
         "folder": "ElShrooms",
         "author": "Reidinger Julia",
         "year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
         "status": 1
     },
 	{
@@ -117,6 +125,7 @@
 	"folder": "Haunting_School_WGL",
 	"author": "Ingrid Lehner",
 	"year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
 	"status": 1
 },
     {  
@@ -132,6 +141,7 @@
         "folder": "BlockDogerWebBuild",
         "author": "LukasSchlogaZareh",
         "year": "2017_WS",
+	"info": "works in Chrome,Edge,FF",
         "status": "1"
     },
 	{
