--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,21 @@
-﻿[
-    {
+
+[
+{
+
+        "title": "PinkBoxShooter",
+
+        "folder": "PinkBoxShooterFirstStatus",
+
+        "author": "Martin Reisinger, Samuel Köpf, David Märzendorfer",
+
+        "year": "2017_WS",
+
+	"info": "works in Edge",
+
+        "status": 0
+
+    },
+	{
         "title": "JumpNRun",
         "folder": "JumpNRun",
         "author": "Michael Wagner",
