--- a/projects.json
+++ b/projects.json
@@ -74,7 +74,7 @@
         "folder": "CupKopfWebGl",
         "author": "Daniel Etzinger",
         "year": "2017_WS",
-         info": "fehlt?",
+        "info": "fehlt?",
         "status": 0
 	},
 	 {
