--- a/projects.json
+++ b/projects.json
@@ -236,4 +236,11 @@
 		"year": "2018_SS",
 		"status": 1
     },
+	{
+		"title": "SplitFighters",
+		"folder": "SplitFighters",
+		"author": "Andreas Zauner",
+		"year": "2018_SS",
+		"status": 1
+    }
 ]
