--- a/projects.json
+++ b/projects.json
@@ -212,8 +212,8 @@
 	    "folder": "SimpleShooterWebGL",
 	    "author": "Christian Lindner",
 	    "year": "2018_SS",
-	    "info": "Partly working",
-	    "status": "0"
+	    "info": "Not finished :-(",
+	    "status": "1"
     },
 	{
 		"title": "BlackHole",
