--- a/projects.json
+++ b/projects.json
@@ -22,6 +22,13 @@
         "year": "2017_WS",
         "status": 0
     },
+	{
+        "title": "Racing Game",
+        "folder": "Racinggame",
+        "author": "Maximilian Schwarz",
+        "year": "2018",
+        "status": 1
+    },
     {
         "title": "Pokémon Fallout",
         "folder": "PokémonFallout",
