--- a/projects.json
+++ b/projects.json
@@ -22,6 +22,13 @@
         "year": "2017_WS",
         "status": 0
     },
+{
+        "title": "Sharky",
+        "folder": "Sharky",
+        "author": "Michael Wagner",
+        "year": "2018_SS",
+        "status": 0
+    },	
 	{
         "title": "Racing Game",
         "folder": "Racinggame",
