--- a/projects.json
+++ b/projects.json
@@ -104,5 +104,13 @@
         "author": "Reidinger Julia",
         "year": "2018",
         "status": 1
+    },
+	,
+	{
+        "title": "Agar",
+        "folder": "Agar",
+        "author": "Reidinger Julia",
+        "year": "2018",
+        "status": 1
     }
 ]
