--- a/projects.json
+++ b/projects.json
@@ -263,5 +263,12 @@
 		"author": "Lukas Ratzenböck",
 		"year": "2018_SS",
 		"status": 1
+	},
+	{
+		"title": "Agar",
+		"folder": "Agar",
+		"author": "Julia Reidinger",
+		"year": "2018_SS",
+		"status": 1
 	}
 ]
